# research

./: .gitignore  pyproject.toml
research/appmet/: appmet_analyze_data.py
research/clickhouse/: dates.txt  insert_into_events_all_main_TMP_by_day.py  insert_into_kion_metrika_by_day.py  query.py  query_mgw.py
research/data/: data_analysis.py  data_analysis_1.py  plejuan.py
research/data/xls/: Казань.xlsx  Отчет по остаткам 23.05.23.xlsx  Отчет_по_остаткам_по_размерам_23_05_23.xlsx  Поставка Казань 11.05.23.xlsx  Поставка Казань 24.03.23.xlsx
research/epg/: 1687964157.xml  1688570155.xml  1688996232.xml  channels.xml  download.py  epg_parser.py
research/kafka/: consumer.py  docker-compose.yml  producer.py
research/kinopoisk/: kinopoisk.py
tests/: test_research.py
